--- a/yellow/index2.html
+++ b/yellow/index2.html
@@ -113,7 +113,7 @@
                         </div>
                         <!-- End Form Group -->
                         <div class="form-group">
-                           <select name="gender" id="gender" class="form-control selectpicker">
+                           <select name="gender" id="gender" class="form-control">
                               <option value="0">Your Gender</option>
                               <option value="male">Male</option>
                               <option value="female">Female</option>
@@ -121,7 +121,7 @@
                         </div>
                         <!-- End Form Group -->
                         <div class="form-group">
-                           <select name="age" id="age" class="form-control selectpicker">
+                           <select name="age" id="age" class="form-control">
                               <option value="0">Your Age</option>
                               <option value="18">18</option>
                               <option value="19">19</option>
@@ -215,7 +215,7 @@
                               <p class="color-white">
                                  I am
                               </p>
-                              <select name="gender" class="form-control selectpicker">
+                              <select name="gender" class="form-control">
                                  <option value="male"> Male </option>
                                  <option value="female"> Female </option>
                               </select>
@@ -224,7 +224,7 @@
                               <p class="color-white">
                                  Looking for
                               </p>
-                              <select name="seeking_gender" class="form-control selectpicker">
+                              <select name="seeking_gender" class="form-control">
                                  <option value="female"> Female </option>
                                  <option value="male"> Male </option>
                               </select>
